wither_derive/tests/fail/model-no-fields.rs
use serde::{Serialize, Deserialize};
use wither::Model;

#[derive(Serialize, Deserialize, Model)]
struct BadModel;

fn main() {}
