wither_derive/tests/fail/model-no-fields.stderr
error: wither models must have named fields
 --> $DIR/model-no-fields.rs:5:1
  |
5 | struct BadModel;
  | ^^^^^^^^^^^^^^^^
